fixed modal display covering middle cards on load

--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ h3{
     stroke-width: 2px;
 }
 
-
-#modal{
+#modal {
+    display: none;
     background-color: #000000;
     border: 5px solid #00E500;
     border-radius: 30px;
@@ -71,12 +71,17 @@ h3{
     align-self: center;
     transform: translate3d(0, -10%, 0);
     /* transition-delay: 3s; */
-    opacity: 0;
+}
+
+#modal-content{
+    
 
     display: grid;
     grid-template-rows: 1fr 1fr .5fr;
     grid-template-columns: 2fr 3fr 2fr;
+
 }
+
 
 .modal-img{
     grid-row: 1 / span 2;
